Fixed White Space Issue at Header Top.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,7 @@ body {
     font-family: Montserrat, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    position: relative;
-    top: -22px;
+    overflow-x: hidden;
 }
 
 .button {
